(library
 (public_name normalty)
 (name normalty)
 (wrapped false)
 (modules_without_implementation)
 (libraries utils core ocaml_parser)
 (modules
   q
   smtty
   leff
   t
   nt
   ntopt
   typed
   frontend
   normalty
 )
 (preprocess (pps ppx_optcomp ppx_compare ppx_sexp_conv ppx_inline_test ppx_assert))
 (inline_tests)
)
